color vars prefixed

--- a/src/components/code/code.less
+++ b/src/components/code/code.less
@@ -5,8 +5,8 @@
 
 code {
     .mixin-defaultBorderRadius;
-    background: @gray-25;
-    color: @purple-13;
+    background: @color-gray-25;
+    color: @color-purple-13;
     direction: ltr;
     font-family: @font-mono;
     font-style: normal;
@@ -21,7 +21,7 @@ code {
 
 pre {
     .mixin-defaultBorderRadius;
-    background: @gray-25;
+    background: @color-gray-25;
     border-bottom-left-radius: 0;
     padding: 1rem;
 }
@@ -36,7 +36,7 @@ pre code {
 .code__example {
     .mixin-defaultBorderRadius;
     background: @color-white;
-    border: @gray-23 1px solid;
+    border: @color-gray-23 1px solid;
 }
 
 .code__example pre code {
@@ -109,7 +109,7 @@ pre code {
 
 .code__example > .tabs__menu,
 .code__example > .tabs__menu .tabs__item {
-    border-color: @gray-23;
+    border-color: @color-gray-23;
 }
 
 .code__example .tabs__page {
@@ -154,7 +154,7 @@ pre code {
 
 .tree {
     .mixin-defaultBorderRadius;
-    background: @gray-25;
+    background: @color-gray-25;
     color: @color-base-13;
     direction: ltr;
     font-family: @font-mono;
@@ -177,68 +177,68 @@ pre code {
 // ==============================================
 
 .highlight {
-    .hll { background-color: @gray-22; }
-    .c   { color: @gray-15; }
+    .hll { background-color: @color-gray-22; }
+    .c   { color: @color-gray-15; }
     .err { }
-    .k   { color: @purple-12; }
-    .l   { color: @yellow-13; }
-    .n   { color: @gray-15; }
-    .o   { color: @gray-10; }
-    .p   { color: @gray-15; }
-    .cm  { color: @gray-15; }
-    .cp  { color: @gray-15; }
-    .c1  { color: @gray-15; }
-    .cs  { color: @gray-15; }
-    .gd  { color: @red-15; }
+    .k   { color: @color-purple-12; }
+    .l   { color: @color-yellow-13; }
+    .n   { color: @color-gray-15; }
+    .o   { color: @color-gray-10; }
+    .p   { color: @color-gray-15; }
+    .cm  { color: @color-gray-15; }
+    .cp  { color: @color-gray-15; }
+    .c1  { color: @color-gray-15; }
+    .cs  { color: @color-gray-15; }
+    .gd  { color: @color-red-15; }
     .ge  { font-style: italic; }
-    .gh  { color: @gray-10; font-weight: bold; }
-    .gi  { color: @green-15 }
-    .gp  { color: @green-15; font-weight: bold; }
+    .gh  { color: @color-gray-10; font-weight: bold; }
+    .gi  { color: @color-green-15 }
+    .gp  { color: @color-green-15; font-weight: bold; }
     .gs  { font-weight: bold}
-    .gu  { color: @green-13; font-weight: bold; }
-    .kc  { color: @purple-12; }
-    .kd  { color: @purple-12; }
-    .kn  { color: @green-13; }
-    .kp  { color: @blue-11; }
-    .kr  { color: @purple-12; }
-    .kt  { color: @yellow-18; }
-    .ld  { color: @green-15; }
-    .m   { color: @yellow-13; }
-    .s   { color: @yellow-13; }
-    .na  { color: @blue-11; }
-    .nb  { color: @blue-11; }
-    .nc  { color: @red-18; }
-    .no  { color: @yellow-18; }
-    .nd  { color: @green-13; }
-    .ni  { color: @gray-10; }
-    .ne  { color: @red-15; }
-    .nf  { color: @blue-11; }
-    .nl  { color: @gray-10; }
-    .nn  { color: @yellow-18; }
-    .nx  { color: @blue-11; }
-    .py  { color: @gray-10; }
-    .nt  { color: @green-13; }
-    .nv  { color: @red-15; }
-    .ow  { color: @green-13; }
-    .w   { color: @gray-10; }
-    .mf  { color: @yellow-13; }
-    .mh  { color: @yellow-13; }
-    .mi  { color: @yellow-13; }
-    .mo  { color: @yellow-13; }
-    .sb  { color: @green-15; }
-    .sc  { color: @gray-10; }
-    .sd  { color: @gray-15; }
-    .s2  { color: @green-15; }
-    .se  { color: @yellow-13; }
-    .sh  { color: @green-15; }
-    .si  { color: @yellow-13; }
-    .sx  { color: @green-15; }
-    .sr  { color: @green-15; }
-    .s1  { color: @green-15; }
-    .ss  { color: @green-15; }
-    .bp  { color: @gray-10; }
-    .vc  { color: @red-15; }
-    .vg  { color: @red-15; }
-    .vi  { color: @red-15; }
-    .il  { color: @yellow-13; }
+    .gu  { color: @color-green-13; font-weight: bold; }
+    .kc  { color: @color-purple-12; }
+    .kd  { color: @color-purple-12; }
+    .kn  { color: @color-green-13; }
+    .kp  { color: @color-blue-11; }
+    .kr  { color: @color-purple-12; }
+    .kt  { color: @color-yellow-18; }
+    .ld  { color: @color-green-15; }
+    .m   { color: @color-yellow-13; }
+    .s   { color: @color-yellow-13; }
+    .na  { color: @color-blue-11; }
+    .nb  { color: @color-blue-11; }
+    .nc  { color: @color-red-18; }
+    .no  { color: @color-yellow-18; }
+    .nd  { color: @color-green-13; }
+    .ni  { color: @color-gray-10; }
+    .ne  { color: @color-red-15; }
+    .nf  { color: @color-blue-11; }
+    .nl  { color: @color-gray-10; }
+    .nn  { color: @color-yellow-18; }
+    .nx  { color: @color-blue-11; }
+    .py  { color: @color-gray-10; }
+    .nt  { color: @color-green-13; }
+    .nv  { color: @color-red-15; }
+    .ow  { color: @color-green-13; }
+    .w   { color: @color-gray-10; }
+    .mf  { color: @color-yellow-13; }
+    .mh  { color: @color-yellow-13; }
+    .mi  { color: @color-yellow-13; }
+    .mo  { color: @color-yellow-13; }
+    .sb  { color: @color-green-15; }
+    .sc  { color: @color-gray-10; }
+    .sd  { color: @color-gray-15; }
+    .s2  { color: @color-green-15; }
+    .se  { color: @color-yellow-13; }
+    .sh  { color: @color-green-15; }
+    .si  { color: @color-yellow-13; }
+    .sx  { color: @color-green-15; }
+    .sr  { color: @color-green-15; }
+    .s1  { color: @color-green-15; }
+    .ss  { color: @color-green-15; }
+    .bp  { color: @color-gray-10; }
+    .vc  { color: @color-red-15; }
+    .vg  { color: @color-red-15; }
+    .vi  { color: @color-red-15; }
+    .il  { color: @color-yellow-13; }
 }
