--- a/src/components/note/note.less
+++ b/src/components/note/note.less
@@ -135,8 +135,8 @@
 .note--subtle {
     .noteConstructor(
         @borderColor: @color-transparent,
-        @txtColor: @gray-6,
-        @bgColor: @gray-23
+        @txtColor: @color-gray-6,
+        @bgColor: @color-gray-23
     );
 }
 
