--- a/src/components/pricesticker/pricesticker.less
+++ b/src/components/pricesticker/pricesticker.less
@@ -20,7 +20,7 @@
 
     &:before,
     &:after {
-        background: @red-15;
+        background: @color-red-15;
         border-radius: 1.5rem;
         content: ' ';
         display: block;
