--- a/src/components/quotation/quotation.less
+++ b/src/components/quotation/quotation.less
@@ -7,7 +7,7 @@
     font-style: italic;
     padding: 2rem 2rem 2rem 7rem;
     position: relative;
-    border-left: @gray-23 2px solid;
+    border-left: @color-gray-23 2px solid;
 
     p {
         margin: 0;
