--- a/src/components/spinner/spinner.less
+++ b/src/components/spinner/spinner.less
@@ -4,7 +4,7 @@
     animation: spin 1s infinite linear;
     background: transparent;
     border-radius: 50%;
-    border: 3px solid @gray-24;
+    border: 3px solid @color-gray-24;
     border-top-color: @color-primary-19;
     box-sizing: border-box;
     content: ' ';
@@ -19,7 +19,7 @@
 }
 
 .spinner--dark::after {
-    border-color: fade(@gray-10,70%);
+    border-color: fade(@color-gray-10,70%);
     border-top-color: @color-primary-19;
 }
 
