--- a/src/less/utilities/color-interactive.less
+++ b/src/less/utilities/color-interactive.less
@@ -13,12 +13,12 @@
     
     // additional background colors
     
-    .hvr--bg-blue-@{i}:hover when (@fullColorPalette = true)   { background: ~"@{blue-@{i}}" !important; }
-    .hvr--bg-gray-@{i}:hover when (@fullColorPalette = true)   { background: ~"@{gray-@{i}}" !important; }
-    .hvr--bg-green-@{i}:hover when (@fullColorPalette = true)  { background: ~"@{green-@{i}}" !important; }
-    .hvr--bg-purple-@{i}:hover when (@fullColorPalette = true) { background: ~"@{purple-@{i}}" !important; }
-    .hvr--bg-red-@{i}:hover when (@fullColorPalette = true)    { background: ~"@{red-@{i}}" !important; }
-    .hvr--bg-yellow-@{i}:hover when (@fullColorPalette = true) { background: ~"@{yellow-@{i}}" !important; }
+    .hvr--bg-blue-@{i}:hover when (@fullColorPalette = true)   { background: ~"@{color-blue-@{i}}" !important; }
+    .hvr--bg-gray-@{i}:hover when (@fullColorPalette = true)   { background: ~"@{color-gray-@{i}}" !important; }
+    .hvr--bg-green-@{i}:hover when (@fullColorPalette = true)  { background: ~"@{color-green-@{i}}" !important; }
+    .hvr--bg-purple-@{i}:hover when (@fullColorPalette = true) { background: ~"@{color-purple-@{i}}" !important; }
+    .hvr--bg-red-@{i}:hover when (@fullColorPalette = true)    { background: ~"@{color-red-@{i}}" !important; }
+    .hvr--bg-yellow-@{i}:hover when (@fullColorPalette = true) { background: ~"@{color-yellow-@{i}}" !important; }
     
     // semantic text colors
 
@@ -30,12 +30,12 @@
     
     // additional text colors
     
-    .hvr--c-blue-@{i}:hover when (@fullColorPalette = true)   { color: ~"@{blue-@{i}}" !important; }
-    .hvr--c-gray-@{i}:hover when (@fullColorPalette = true)   { color: ~"@{gray-@{i}}" !important; }
-    .hvr--c-green-@{i}:hover when (@fullColorPalette = true)  { color: ~"@{green-@{i}}" !important; }
-    .hvr--c-purple-@{i}:hover when (@fullColorPalette = true) { color: ~"@{purple-@{i}}" !important; }
-    .hvr--c-red-@{i}:hover when (@fullColorPalette = true)    { color: ~"@{red-@{i}}" !important; }
-    .hvr--c-yellow-@{i}:hover when (@fullColorPalette = true) { color: ~"@{yellow-@{i}}" !important; }
+    .hvr--c-blue-@{i}:hover when (@fullColorPalette = true)   { color: ~"@{color-blue-@{i}}" !important; }
+    .hvr--c-gray-@{i}:hover when (@fullColorPalette = true)   { color: ~"@{color-gray-@{i}}" !important; }
+    .hvr--c-green-@{i}:hover when (@fullColorPalette = true)  { color: ~"@{color-green-@{i}}" !important; }
+    .hvr--c-purple-@{i}:hover when (@fullColorPalette = true) { color: ~"@{color-purple-@{i}}" !important; }
+    .hvr--c-red-@{i}:hover when (@fullColorPalette = true)    { color: ~"@{color-red-@{i}}" !important; }
+    .hvr--c-yellow-@{i}:hover when (@fullColorPalette = true) { color: ~"@{color-yellow-@{i}}" !important; }
     
     // semantic border colors
 
@@ -47,12 +47,12 @@
     
     // additional border colors
     
-    .hvr--bc-blue-@{i}:hover when (@fullColorPalette = true)   { border-color: ~"@{blue-@{i}}" !important; }
-    .hvr--bc-gray-@{i}:hover when (@fullColorPalette = true)   { border-color: ~"@{gray-@{i}}" !important; }
-    .hvr--bc-green-@{i}:hover when (@fullColorPalette = true)  { border-color: ~"@{green-@{i}}" !important; }
-    .hvr--bc-purple-@{i}:hover when (@fullColorPalette = true) { border-color: ~"@{purple-@{i}}" !important; }
-    .hvr--bc-red-@{i}:hover when (@fullColorPalette = true)    { border-color: ~"@{red-@{i}}" !important; }
-    .hvr--bc-yellow-@{i}:hover when (@fullColorPalette = true) { border-color: ~"@{yellow-@{i}}" !important; }
+    .hvr--bc-blue-@{i}:hover when (@fullColorPalette = true)   { border-color: ~"@{color-blue-@{i}}" !important; }
+    .hvr--bc-gray-@{i}:hover when (@fullColorPalette = true)   { border-color: ~"@{color-gray-@{i}}" !important; }
+    .hvr--bc-green-@{i}:hover when (@fullColorPalette = true)  { border-color: ~"@{color-green-@{i}}" !important; }
+    .hvr--bc-purple-@{i}:hover when (@fullColorPalette = true) { border-color: ~"@{color-purple-@{i}}" !important; }
+    .hvr--bc-red-@{i}:hover when (@fullColorPalette = true)    { border-color: ~"@{color-red-@{i}}" !important; }
+    .hvr--bc-yellow-@{i}:hover when (@fullColorPalette = true) { border-color: ~"@{color-yellow-@{i}}" !important; }
 
 }
 .generate_hvrStyles(25);
