--- a/src/less/config/colors.less
+++ b/src/less/config/colors.less
@@ -6,68 +6,68 @@
 @htmlBackgroundColor : @color-white;
 @bodyBackgroundColor : @color-white;
 @textColor           : @color-base-8;
-@focusColor          : @blue-22;
+@focusColor          : @color-blue-22;
 @selectionColor      : fade(@color-primary-25, 50%);
 @linkColor           : @color-primary-12;
 
 // color scheme
 // ============
 
-// "base" color                         "primary" color
+// "base" color                               "primary" color
 
-@color-base-1:  @gray-1;                @color-primary-1:  @purple-1;
-@color-base-2:  @gray-2;                @color-primary-2:  @purple-2;
-@color-base-3:  @gray-3;                @color-primary-3:  @purple-3;
-@color-base-4:  @gray-4;                @color-primary-4:  @purple-4;
-@color-base-5:  @gray-5;                @color-primary-5:  @purple-5;
-@color-base-6:  @gray-6;                @color-primary-6:  @purple-6;
-@color-base-7:  @gray-7;                @color-primary-7:  @purple-7;
-@color-base-8:  @gray-8;                @color-primary-8:  @purple-8;
-@color-base-9:  @gray-9;                @color-primary-9:  @purple-9;
-@color-base-10: @gray-10;               @color-primary-10: @purple-10;
-@color-base-11: @gray-11;               @color-primary-11: @purple-11;
-@color-base-12: @gray-12;               @color-primary-12: @purple-12;
-@color-base-13: @gray-13;               @color-primary-13: @purple-13;
-@color-base-14: @gray-14;               @color-primary-14: @purple-14;
-@color-base-15: @gray-15;               @color-primary-15: @purple-15;
-@color-base-16: @gray-16;               @color-primary-16: @purple-16;
-@color-base-17: @gray-17;               @color-primary-17: @purple-17;
-@color-base-18: @gray-18;               @color-primary-18: @purple-18;
-@color-base-19: @gray-19;               @color-primary-19: @purple-19;
-@color-base-20: @gray-20;               @color-primary-20: @purple-20;
-@color-base-21: @gray-21;               @color-primary-21: @purple-21;
-@color-base-22: @gray-22;               @color-primary-22: @purple-22;
-@color-base-23: @gray-23;               @color-primary-23: @purple-23;
-@color-base-24: @gray-24;               @color-primary-24: @purple-24;
-@color-base-25: @gray-25;               @color-primary-25: @purple-25;
+@color-base-1:  @color-gray-1;                @color-primary-1:  @color-purple-1;
+@color-base-2:  @color-gray-2;                @color-primary-2:  @color-purple-2;
+@color-base-3:  @color-gray-3;                @color-primary-3:  @color-purple-3;
+@color-base-4:  @color-gray-4;                @color-primary-4:  @color-purple-4;
+@color-base-5:  @color-gray-5;                @color-primary-5:  @color-purple-5;
+@color-base-6:  @color-gray-6;                @color-primary-6:  @color-purple-6;
+@color-base-7:  @color-gray-7;                @color-primary-7:  @color-purple-7;
+@color-base-8:  @color-gray-8;                @color-primary-8:  @color-purple-8;
+@color-base-9:  @color-gray-9;                @color-primary-9:  @color-purple-9;
+@color-base-10: @color-gray-10;               @color-primary-10: @color-purple-10;
+@color-base-11: @color-gray-11;               @color-primary-11: @color-purple-11;
+@color-base-12: @color-gray-12;               @color-primary-12: @color-purple-12;
+@color-base-13: @color-gray-13;               @color-primary-13: @color-purple-13;
+@color-base-14: @color-gray-14;               @color-primary-14: @color-purple-14;
+@color-base-15: @color-gray-15;               @color-primary-15: @color-purple-15;
+@color-base-16: @color-gray-16;               @color-primary-16: @color-purple-16;
+@color-base-17: @color-gray-17;               @color-primary-17: @color-purple-17;
+@color-base-18: @color-gray-18;               @color-primary-18: @color-purple-18;
+@color-base-19: @color-gray-19;               @color-primary-19: @color-purple-19;
+@color-base-20: @color-gray-20;               @color-primary-20: @color-purple-20;
+@color-base-21: @color-gray-21;               @color-primary-21: @color-purple-21;
+@color-base-22: @color-gray-22;               @color-primary-22: @color-purple-22;
+@color-base-23: @color-gray-23;               @color-primary-23: @color-purple-23;
+@color-base-24: @color-gray-24;               @color-primary-24: @color-purple-24;
+@color-base-25: @color-gray-25;               @color-primary-25: @color-purple-25;
 
-// "attention" color                   "negative" color                     "positive" color
+// "attention" color                          "negative" color                          "positive" color
 
-@color-attention-1:  @yellow-1;         @color-negative-1:  @red-1;         @color-positive-1:  @green-1;
-@color-attention-2:  @yellow-2;         @color-negative-2:  @red-2;         @color-positive-2:  @green-2;
-@color-attention-3:  @yellow-3;         @color-negative-3:  @red-3;         @color-positive-3:  @green-3;
-@color-attention-4:  @yellow-4;         @color-negative-4:  @red-4;         @color-positive-4:  @green-4;
-@color-attention-5:  @yellow-5;         @color-negative-5:  @red-5;         @color-positive-5:  @green-5;
-@color-attention-6:  @yellow-6;         @color-negative-6:  @red-6;         @color-positive-6:  @green-6;
-@color-attention-7:  @yellow-7;         @color-negative-7:  @red-7;         @color-positive-7:  @green-7;
-@color-attention-8:  @yellow-8;         @color-negative-8:  @red-8;         @color-positive-8:  @green-8;
-@color-attention-9:  @yellow-9;         @color-negative-9:  @red-9;         @color-positive-9:  @green-9;
-@color-attention-10: @yellow-10;        @color-negative-10: @red-10;        @color-positive-10: @green-10;
-@color-attention-11: @yellow-11;        @color-negative-11: @red-11;        @color-positive-11: @green-11;
-@color-attention-12: @yellow-12;        @color-negative-12: @red-12;        @color-positive-12: @green-12;
-@color-attention-13: @yellow-13;        @color-negative-13: @red-13;        @color-positive-13: @green-13;
-@color-attention-14: @yellow-14;        @color-negative-14: @red-14;        @color-positive-14: @green-14;
-@color-attention-15: @yellow-15;        @color-negative-15: @red-15;        @color-positive-15: @green-15;
-@color-attention-16: @yellow-16;        @color-negative-16: @red-16;        @color-positive-16: @green-16;
-@color-attention-17: @yellow-17;        @color-negative-17: @red-17;        @color-positive-17: @green-17;
-@color-attention-18: @yellow-18;        @color-negative-18: @red-18;        @color-positive-18: @green-18;
-@color-attention-19: @yellow-19;        @color-negative-19: @red-19;        @color-positive-19: @green-19;
-@color-attention-20: @yellow-20;        @color-negative-20: @red-20;        @color-positive-20: @green-20;
-@color-attention-21: @yellow-21;        @color-negative-21: @red-21;        @color-positive-21: @green-21;
-@color-attention-22: @yellow-22;        @color-negative-22: @red-22;        @color-positive-22: @green-22;
-@color-attention-23: @yellow-23;        @color-negative-23: @red-23;        @color-positive-23: @green-23;
-@color-attention-24: @yellow-24;        @color-negative-24: @red-24;        @color-positive-24: @green-24;
-@color-attention-25: @yellow-25;        @color-negative-25: @red-25;        @color-positive-25: @green-25;
+@color-attention-1:  @color-yellow-1;         @color-negative-1:  @color-red-1;         @color-positive-1:  @color-green-1;
+@color-attention-2:  @color-yellow-2;         @color-negative-2:  @color-red-2;         @color-positive-2:  @color-green-2;
+@color-attention-3:  @color-yellow-3;         @color-negative-3:  @color-red-3;         @color-positive-3:  @color-green-3;
+@color-attention-4:  @color-yellow-4;         @color-negative-4:  @color-red-4;         @color-positive-4:  @color-green-4;
+@color-attention-5:  @color-yellow-5;         @color-negative-5:  @color-red-5;         @color-positive-5:  @color-green-5;
+@color-attention-6:  @color-yellow-6;         @color-negative-6:  @color-red-6;         @color-positive-6:  @color-green-6;
+@color-attention-7:  @color-yellow-7;         @color-negative-7:  @color-red-7;         @color-positive-7:  @color-green-7;
+@color-attention-8:  @color-yellow-8;         @color-negative-8:  @color-red-8;         @color-positive-8:  @color-green-8;
+@color-attention-9:  @color-yellow-9;         @color-negative-9:  @color-red-9;         @color-positive-9:  @color-green-9;
+@color-attention-10: @color-yellow-10;        @color-negative-10: @color-red-10;        @color-positive-10: @color-green-10;
+@color-attention-11: @color-yellow-11;        @color-negative-11: @color-red-11;        @color-positive-11: @color-green-11;
+@color-attention-12: @color-yellow-12;        @color-negative-12: @color-red-12;        @color-positive-12: @color-green-12;
+@color-attention-13: @color-yellow-13;        @color-negative-13: @color-red-13;        @color-positive-13: @color-green-13;
+@color-attention-14: @color-yellow-14;        @color-negative-14: @color-red-14;        @color-positive-14: @color-green-14;
+@color-attention-15: @color-yellow-15;        @color-negative-15: @color-red-15;        @color-positive-15: @color-green-15;
+@color-attention-16: @color-yellow-16;        @color-negative-16: @color-red-16;        @color-positive-16: @color-green-16;
+@color-attention-17: @color-yellow-17;        @color-negative-17: @color-red-17;        @color-positive-17: @color-green-17;
+@color-attention-18: @color-yellow-18;        @color-negative-18: @color-red-18;        @color-positive-18: @color-green-18;
+@color-attention-19: @color-yellow-19;        @color-negative-19: @color-red-19;        @color-positive-19: @color-green-19;
+@color-attention-20: @color-yellow-20;        @color-negative-20: @color-red-20;        @color-positive-20: @color-green-20;
+@color-attention-21: @color-yellow-21;        @color-negative-21: @color-red-21;        @color-positive-21: @color-green-21;
+@color-attention-22: @color-yellow-22;        @color-negative-22: @color-red-22;        @color-positive-22: @color-green-22;
+@color-attention-23: @color-yellow-23;        @color-negative-23: @color-red-23;        @color-positive-23: @color-green-23;
+@color-attention-24: @color-yellow-24;        @color-negative-24: @color-red-24;        @color-positive-24: @color-green-24;
+@color-attention-25: @color-yellow-25;        @color-negative-25: @color-red-25;        @color-positive-25: @color-green-25;
 
 // achromatic colors
 
@@ -82,58 +82,58 @@
 // color palette
 // =============
 
-// blue                 green                   red
+// blue                         green                           red
 
-@blue-1:  #000103;      @green-1:  #001a0c;     @red-1:  #010000;
-@blue-2:  #000e1b;      @green-2:  #002a13;     @red-2:  #170600;
-@blue-3:  #001b33;      @green-3:  #07371d;     @red-3:  #2d0c00;
-@blue-4:  #00284b;      @green-4:  #114127;     @red-4:  #441200;
-@blue-5:  #003464;      @green-5:  #1b4b31;     @red-5:  #5a1800;
-@blue-6:  #044076;      @green-6:  #25553b;     @red-6:  #701e00;
-@blue-7:  #0e4a80;      @green-7:  #2f5f45;     @red-7:  #862400;
-@blue-8:  #19558b;      @green-8:  #3a6a50;     @red-8:  #9c2b00;
-@blue-9:  #235f95;      @green-9:  #44745a;     @red-9:  #b23100;
-@blue-10: #2d699f;      @green-10: #4e7e64;     @red-10: #c83700;
-@blue-11: #3773a9;      @green-11: #58886e;     @red-11: #df3d00;
-@blue-12: #417db3;      @green-12: #629278;     @red-12: #f54300;
-@blue-13: #4c88be;      @green-13: #6d9d83;     @red-13: #ff4d0a;
-@blue-14: #5692c8;      @green-14: #77a78d;     @red-14: #ff5b1d;
-@blue-15: #609cd2;      @green-15: #81b197;     @red-15: #ff6830;
-@blue-16: #6aa6dc;      @green-16: #8bbba1;     @red-16: #ff7643;
-@blue-17: #74b0e6;      @green-17: #95c5ab;     @red-17: #ff8456;
-@blue-18: #7fbbf1;      @green-18: #a0d0b6;     @red-18: #ff9269;
-@blue-19: #89c5fb;      @green-19: #aadac0;     @red-19: #ff9f7c;
-@blue-20: #97ceff;      @green-20: #b4e4ca;     @red-20: #ffad8f;
-@blue-21: #a9d6ff;      @green-21: #beeed4;     @red-21: #ffbba1;
-@blue-22: #bbdfff;      @green-22: #c8f8de;     @red-22: #ffc9b4;
-@blue-23: #cce7ff;      @green-23: #d9ffea;     @red-23: #ffd6c7;
-@blue-24: #deefff;      @green-24: #f5fffa;     @red-24: #ffe4da;
-@blue-25: #eff8ff;      @green-25: #ffffff;     @red-25: #fff2ed;
+@color-blue-1:  #000103;      @color-green-1:  #001a0c;     @color-red-1:  #010000;
+@color-blue-2:  #000e1b;      @color-green-2:  #002a13;     @color-red-2:  #170600;
+@color-blue-3:  #001b33;      @color-green-3:  #07371d;     @color-red-3:  #2d0c00;
+@color-blue-4:  #00284b;      @color-green-4:  #114127;     @color-red-4:  #441200;
+@color-blue-5:  #003464;      @color-green-5:  #1b4b31;     @color-red-5:  #5a1800;
+@color-blue-6:  #044076;      @color-green-6:  #25553b;     @color-red-6:  #701e00;
+@color-blue-7:  #0e4a80;      @color-green-7:  #2f5f45;     @color-red-7:  #862400;
+@color-blue-8:  #19558b;      @color-green-8:  #3a6a50;     @color-red-8:  #9c2b00;
+@color-blue-9:  #235f95;      @color-green-9:  #44745a;     @color-red-9:  #b23100;
+@color-blue-10: #2d699f;      @color-green-10: #4e7e64;     @color-red-10: #c83700;
+@color-blue-11: #3773a9;      @color-green-11: #58886e;     @color-red-11: #df3d00;
+@color-blue-12: #417db3;      @color-green-12: #629278;     @color-red-12: #f54300;
+@color-blue-13: #4c88be;      @color-green-13: #6d9d83;     @color-red-13: #ff4d0a;
+@color-blue-14: #5692c8;      @color-green-14: #77a78d;     @color-red-14: #ff5b1d;
+@color-blue-15: #609cd2;      @color-green-15: #81b197;     @color-red-15: #ff6830;
+@color-blue-16: #6aa6dc;      @color-green-16: #8bbba1;     @color-red-16: #ff7643;
+@color-blue-17: #74b0e6;      @color-green-17: #95c5ab;     @color-red-17: #ff8456;
+@color-blue-18: #7fbbf1;      @color-green-18: #a0d0b6;     @color-red-18: #ff9269;
+@color-blue-19: #89c5fb;      @color-green-19: #aadac0;     @color-red-19: #ff9f7c;
+@color-blue-20: #97ceff;      @color-green-20: #b4e4ca;     @color-red-20: #ffad8f;
+@color-blue-21: #a9d6ff;      @color-green-21: #beeed4;     @color-red-21: #ffbba1;
+@color-blue-22: #bbdfff;      @color-green-22: #c8f8de;     @color-red-22: #ffc9b4;
+@color-blue-23: #cce7ff;      @color-green-23: #d9ffea;     @color-red-23: #ffd6c7;
+@color-blue-24: #deefff;      @color-green-24: #f5fffa;     @color-red-24: #ffe4da;
+@color-blue-25: #eff8ff;      @color-green-25: #ffffff;     @color-red-25: #fff2ed;
 
-// yellow               purple                  gray
+// yellow                       purple                          gray
 
-@yellow-1:  #282400;    @purple-1:  #000000;    @gray-1:  #0b0a09;
-@yellow-2:  #342f00;    @purple-2:  #000000;    @gray-2:  #151413;
-@yellow-3:  #403a00;    @purple-3:  #080022;    @gray-3:  #201f1e;
-@yellow-4:  #4b4507;    @purple-4:  #15024f;    @gray-4:  #2a2928;
-@yellow-5:  #554f11;    @purple-5:  #200d5a;    @gray-5:  #343332;
-@yellow-6:  #5f591b;    @purple-6:  #2a1764;    @gray-6:  #3e3d3c;
-@yellow-7:  #696325;    @purple-7:  #34216e;    @gray-7:  #484746;
-@yellow-8:  #746e30;    @purple-8:  #3e2b78;    @gray-8:  #535251;
-@yellow-9:  #7e783a;    @purple-9:  #483582;    @gray-9:  #5d5c5b;
-@yellow-10: #888244;    @purple-10: #52408d;    @gray-10: #676665;
-@yellow-11: #928c4e;    @purple-11: #5d4a97;    @gray-11: #71706f;
-@yellow-12: #9c9658;    @purple-12: #6754a1;    @gray-12: #7b7a79;
-@yellow-13: #a7a163;    @purple-13: #715eab;    @gray-13: #868584;
-@yellow-14: #b1ab6d;    @purple-14: #7b68b5;    @gray-14: #908f8e;
-@yellow-15: #bbb577;    @purple-15: #8572c0;    @gray-15: #9a9998;
-@yellow-16: #c5bf81;    @purple-16: #907dca;    @gray-16: #a4a3a2;
-@yellow-17: #cfc98b;    @purple-17: #9a87d4;    @gray-17: #aeadac;
-@yellow-18: #dad496;    @purple-18: #a491de;    @gray-18: #b9b8b7;
-@yellow-19: #e4dea0;    @purple-19: #ae9be8;    @gray-19: #c3c2c1;
-@yellow-20: #eee8aa;    @purple-20: #b9a6f3;    @gray-20: #cdcccb;
-@yellow-21: #f8f2b4;    @purple-21: #c3b0fd;    @gray-21: #d7d6d5;
-@yellow-22: #fffbd0;    @purple-22: #ccbcff;    @gray-22: #e1e0df;
-@yellow-23: #ffffff;    @purple-23: #d6c8ff;    @gray-23: #ecebea;
-@yellow-24: #ffffff;    @purple-24: #dfd5ff;    @gray-24: #f6f5f4;
-@yellow-25: #ffffff;    @purple-25: #e9e1ff;    @gray-25: #faf9f7;
+@color-yellow-1:  #282400;    @color-purple-1:  #000000;    @color-gray-1:  #0b0a09;
+@color-yellow-2:  #342f00;    @color-purple-2:  #000000;    @color-gray-2:  #151413;
+@color-yellow-3:  #403a00;    @color-purple-3:  #080022;    @color-gray-3:  #201f1e;
+@color-yellow-4:  #4b4507;    @color-purple-4:  #15024f;    @color-gray-4:  #2a2928;
+@color-yellow-5:  #554f11;    @color-purple-5:  #200d5a;    @color-gray-5:  #343332;
+@color-yellow-6:  #5f591b;    @color-purple-6:  #2a1764;    @color-gray-6:  #3e3d3c;
+@color-yellow-7:  #696325;    @color-purple-7:  #34216e;    @color-gray-7:  #484746;
+@color-yellow-8:  #746e30;    @color-purple-8:  #3e2b78;    @color-gray-8:  #535251;
+@color-yellow-9:  #7e783a;    @color-purple-9:  #483582;    @color-gray-9:  #5d5c5b;
+@color-yellow-10: #888244;    @color-purple-10: #52408d;    @color-gray-10: #676665;
+@color-yellow-11: #928c4e;    @color-purple-11: #5d4a97;    @color-gray-11: #71706f;
+@color-yellow-12: #9c9658;    @color-purple-12: #6754a1;    @color-gray-12: #7b7a79;
+@color-yellow-13: #a7a163;    @color-purple-13: #715eab;    @color-gray-13: #868584;
+@color-yellow-14: #b1ab6d;    @color-purple-14: #7b68b5;    @color-gray-14: #908f8e;
+@color-yellow-15: #bbb577;    @color-purple-15: #8572c0;    @color-gray-15: #9a9998;
+@color-yellow-16: #c5bf81;    @color-purple-16: #907dca;    @color-gray-16: #a4a3a2;
+@color-yellow-17: #cfc98b;    @color-purple-17: #9a87d4;    @color-gray-17: #aeadac;
+@color-yellow-18: #dad496;    @color-purple-18: #a491de;    @color-gray-18: #b9b8b7;
+@color-yellow-19: #e4dea0;    @color-purple-19: #ae9be8;    @color-gray-19: #c3c2c1;
+@color-yellow-20: #eee8aa;    @color-purple-20: #b9a6f3;    @color-gray-20: #cdcccb;
+@color-yellow-21: #f8f2b4;    @color-purple-21: #c3b0fd;    @color-gray-21: #d7d6d5;
+@color-yellow-22: #fffbd0;    @color-purple-22: #ccbcff;    @color-gray-22: #e1e0df;
+@color-yellow-23: #ffffff;    @color-purple-23: #d6c8ff;    @color-gray-23: #ecebea;
+@color-yellow-24: #ffffff;    @color-purple-24: #dfd5ff;    @color-gray-24: #f6f5f4;
+@color-yellow-25: #ffffff;    @color-purple-25: #e9e1ff;    @color-gray-25: #faf9f7;
