--- a/src/less/core/helpers.less
+++ b/src/less/core/helpers.less
@@ -111,7 +111,7 @@
 
 .mixin-defaultFocus() {
     box-shadow: 0 0 0 2px fade(@focusColor,100%);
-    border-color: @blue-18;
+    border-color: @color-blue-18;
     outline: 0;
 }
 
