--- a/src/less/utilities/color-base.less
+++ b/src/less/utilities/color-base.less
@@ -16,12 +16,12 @@
 
     // additional background colors
 
-    .bg-blue-@{i} when (@fullColorPalette = true)   { background: ~"@{blue-@{i}}" !important; }
-    .bg-gray-@{i} when (@fullColorPalette = true)   { background: ~"@{gray-@{i}}" !important; }
-    .bg-green-@{i} when (@fullColorPalette = true)  { background: ~"@{green-@{i}}" !important; }
-    .bg-purple-@{i} when (@fullColorPalette = true) { background: ~"@{purple-@{i}}" !important; }
-    .bg-red-@{i} when (@fullColorPalette = true)    { background: ~"@{red-@{i}}" !important; }
-    .bg-yellow-@{i} when (@fullColorPalette = true) { background: ~"@{yellow-@{i}}" !important; }
+    .bg-blue-@{i} when (@fullColorPalette = true)   { background: ~"@{color-blue-@{i}}" !important; }
+    .bg-gray-@{i} when (@fullColorPalette = true)   { background: ~"@{color-gray-@{i}}" !important; }
+    .bg-green-@{i} when (@fullColorPalette = true)  { background: ~"@{color-green-@{i}}" !important; }
+    .bg-purple-@{i} when (@fullColorPalette = true) { background: ~"@{color-purple-@{i}}" !important; }
+    .bg-red-@{i} when (@fullColorPalette = true)    { background: ~"@{color-red-@{i}}" !important; }
+    .bg-yellow-@{i} when (@fullColorPalette = true) { background: ~"@{color-yellow-@{i}}" !important; }
 
     // semantic border colors
 
@@ -33,12 +33,12 @@
 
     // additional border colors
 
-    .bc-blue-@{i} when (@fullColorPalette = true)   { border-color: ~"@{blue-@{i}}" !important; }
-    .bc-gray-@{i} when (@fullColorPalette = true)   { border-color: ~"@{gray-@{i}}" !important; }
-    .bc-green-@{i} when (@fullColorPalette = true)  { border-color: ~"@{green-@{i}}" !important; }
-    .bc-purple-@{i} when (@fullColorPalette = true) { border-color: ~"@{purple-@{i}}" !important; }
-    .bc-red-@{i} when (@fullColorPalette = true)    { border-color: ~"@{red-@{i}}" !important; }
-    .bc-yellow-@{i} when (@fullColorPalette = true) { border-color: ~"@{yellow-@{i}}" !important; }
+    .bc-blue-@{i} when (@fullColorPalette = true)   { border-color: ~"@{color-blue-@{i}}" !important; }
+    .bc-gray-@{i} when (@fullColorPalette = true)   { border-color: ~"@{color-gray-@{i}}" !important; }
+    .bc-green-@{i} when (@fullColorPalette = true)  { border-color: ~"@{color-green-@{i}}" !important; }
+    .bc-purple-@{i} when (@fullColorPalette = true) { border-color: ~"@{color-purple-@{i}}" !important; }
+    .bc-red-@{i} when (@fullColorPalette = true)    { border-color: ~"@{color-red-@{i}}" !important; }
+    .bc-yellow-@{i} when (@fullColorPalette = true) { border-color: ~"@{color-yellow-@{i}}" !important; }
 
     // semantic text colors
 
@@ -50,12 +50,12 @@
 
     // additional text colors
 
-    .c-blue-@{i} when (@fullColorPalette = true)   { color: ~"@{blue-@{i}}" !important; }
-    .c-gray-@{i} when (@fullColorPalette = true)   { color: ~"@{gray-@{i}}" !important; }
-    .c-green-@{i} when (@fullColorPalette = true)  { color: ~"@{green-@{i}}" !important; }
-    .c-purple-@{i} when (@fullColorPalette = true) { color: ~"@{purple-@{i}}" !important; }
-    .c-red-@{i} when (@fullColorPalette = true)    { color: ~"@{red-@{i}}" !important; }
-    .c-yellow-@{i} when (@fullColorPalette = true) { color: ~"@{yellow-@{i}}" !important; }
+    .c-blue-@{i} when (@fullColorPalette = true)   { color: ~"@{color-blue-@{i}}" !important; }
+    .c-gray-@{i} when (@fullColorPalette = true)   { color: ~"@{color-gray-@{i}}" !important; }
+    .c-green-@{i} when (@fullColorPalette = true)  { color: ~"@{color-green-@{i}}" !important; }
+    .c-purple-@{i} when (@fullColorPalette = true) { color: ~"@{color-purple-@{i}}" !important; }
+    .c-red-@{i} when (@fullColorPalette = true)    { color: ~"@{color-red-@{i}}" !important; }
+    .c-yellow-@{i} when (@fullColorPalette = true) { color: ~"@{color-yellow-@{i}}" !important; }
 
 }
 .generate_colors(25);
